# chromium_compact_enc_det_conan

./: CMakeLists.txt  README.md  conanfile.py
